# fourier

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
fourierdb/: __init__.py  __main__.py  fourier.py  helpers.py  server.py
fourierdb/database/: __init__.py  fourier.py
fourierdb/server/: server.py
